[package]
name = "veight"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "veight"
crate-type = ["cdylib"]

[dependencies]
dashmap = "6.1.0"
ijson = "0.1.4"
once_cell = "1.21.3"
pyo3 = "0.28.1"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.49.0", features = ["rt", "sync"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
v8 = "145.0.0"
